--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Puzzle !!</title>
-	<link rel="stylesheet" href="css/foundation.min.css">
-	<link rel="stylesheet" href="css/app.css">
+  <meta charset="UTF-8">
+  <title>Puzzle !!</title>
+  <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-<br>
-<br><br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-	<div class="small-6 columns small-centered">
-		<div class="row">
-			<div class="small-5 columns button">1</div>
-			<div class="small-5 columns button">2</div>
-		</div>
-		
-		<div class="row">
-			<div class="small-5 columns button">3</div>
-			<div class="small-5 columns button">4</div>
-		</div>
-	</div>
+  <div class="row">
+    <div class="small-6 columns">
+      <div class="small-5 columns button level right">1</div>
+    </div>
 
-	<script src="js/foundation.min.js"></script>
-	<script src="vendor/jquery.min.js"></script>
-	<script src="vendor/what-input.min"></script>
-	<script src="js/app.js"></script>
+    <div class="small-6 columns">
+      <div class="small-5 columns button level">2</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="small-6 columns">
+      <div class="small-5 columns button level right">3</div>
+    </div>
+
+    <div class="small-6 columns">
+      <div class="small-5 columns button level">4</div>
+    </div>
+
+    <script src="js/foundation.min.js"></script>
+    <script src="vendor/jquery.min.js"></script>
+    <script src="vendor/what-input.min"></script>
+    <script src="js/app.js"></script>
 
 </body>
+
 </html>
