--- a/index.html
+++ b/index.html
@@ -5,33 +5,37 @@
   <meta charset="UTF-8">
   <title>Puzzle !!</title>
   <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/color-scheme.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
-  <div class="row">
-    <div class="small-6 columns">
-      <div class="small-5 columns button level right">1</div>
-    </div>
+    <div class="page-container">
 
-    <div class="small-6 columns">
-      <div class="small-5 columns button level">2</div>
-    </div>
-  </div>
+      <div class="title">
+        <h2 class="text-center">Choose Your Level</h2>
+      </div>
 
-  <div class="row">
-    <div class="small-6 columns">
-      <div class="small-5 columns button level right">3</div>
-    </div>
+      <div class="row">
+        <div class="small-6 columns">
+          <a href="#" class="small-5 columns button level right">1 <span class="block">Play Now !</span></a>
+        </div>
 
-    <div class="small-6 columns">
-      <div class="small-5 columns button level">4</div>
+        <div class="small-6 columns">
+          <a href="#" class="small-5 columns button level disabled">2 <span class="block">(Locked)</span></a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-6 columns">
+          <a href="#" class="small-5 columns button level right disabled">3 <span class="block">(Locked)</span></a>
+        </div>
+
+        <div class="small-6 columns">
+          <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
+        </div>
+      </div>
     </div>
 
     <script src="js/foundation.min.js"></script>
