--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
           <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
         </div>
       </div>
+
+      <div class="row">
+          <div class="small-8 columns small-centered">
+          <form action="#" class="form">
+            <select id="contactDropdown">
+              <option DISABLED>Silahkan Pilih Tema</option>
+              <option>Bleach</option>
+              <option>Doraemon</option>
+              <option>Gintama</option>
+              <option>Naruto</option>
+              <option>One Piece</option>
+            </select>
+          </form>
+        </div>
+      </div>
+
     </div>
 
     <script src="js/foundation.min.js"></script>
