Ganti Warna Header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="page-container">
 
       <div class="title">
-        <h2 class="text-center">Choose Your Level</h2>
+        <h2 class="text-center mdc-text-blue-grey-700">Choose Your Level</h2>
       </div>
 
       <div class="row">
