--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/color-scheme.css">
   <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/foundation-icons.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/material-design-iconic-font.css">
 </head>
 
 <body>
@@ -36,9 +39,13 @@
           <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
         </div>
       </div>
+      
+      <br>
+
 
       <div class="row">
           <div class="small-8 columns small-centered">
+          <h4>Pilih Tema :</h4>
           <form action="#" class="form">
             <select id="contactDropdown">
               <option DISABLED>Silahkan Pilih Tema</option>
