--- a/index.html
+++ b/index.html
@@ -8,56 +8,53 @@
   <link rel="stylesheet" href="css/color-scheme.css">
   <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/foundation-icons.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/material-design-iconic-font.css">
+  <link rel="icon" href="images/logo.png">
 </head>
 
 <body>
 
     <div class="page-container">
 
-      <div class="title">
-        <h2 class="text-center mdc-text-blue-grey-700">Choose Your Level</h2>
-      </div>
+			<div class="large-12">
+	      <div class="top-bar-section">
+	        <h3 class="text-center mdc-text-blue-grey-700">
+	          <a href="#" class="title"><img src="images/logo.png" alt="Logo"></a>Choose Your Level</h3>
+	      </div>
 
-      <div class="row">
-        <div class="small-6 columns">
-          <a href="#" class="small-5 columns button level right">1 <span class="block">Play Now !</span></a>
-        </div>
+	      <div class="row">
+	        <div class="small-6 columns">
+	          <a href="#" class="small-5 columns button level right">1 <span class="block">Play Now !</span></a>
+	        </div>
 
-        <div class="small-6 columns">
-          <a href="#" class="small-5 columns button level disabled">2 <span class="block">(Locked)</span></a>
-        </div>
-      </div>
+	        <div class="small-6 columns">
+	          <a href="#" class="small-5 columns button level disabled">2 <span class="block">(Locked)</span></a>
+	        </div>
+	      </div>
 
-      <div class="row">
-        <div class="small-6 columns">
-          <a href="#" class="small-5 columns button level right disabled">3 <span class="block">(Locked)</span></a>
-        </div>
+	      <div class="row">
+	        <div class="small-6 columns">
+	          <a href="#" class="small-5 columns button level right disabled">3 <span class="block">(Locked)</span></a>
+	        </div>
 
-        <div class="small-6 columns">
-          <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
-        </div>
-      </div>
-      
-      <br>
+	        <div class="small-6 columns">
+	          <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
+	        </div>
+	      </div>
 
-
-      <div class="row">
-          <div class="small-8 columns small-centered">
-          <h4>Pilih Tema :</h4>
-          <form action="#" class="form">
-            <select id="contactDropdown">
-              <option DISABLED>Silahkan Pilih Tema</option>
-              <option>Bleach</option>
-              <option>Doraemon</option>
-              <option>Gintama</option>
-              <option>Naruto</option>
-              <option>One Piece</option>
-            </select>
-          </form>
-        </div>
+	      <div class="row">
+	          <div class="small-8 columns small-centered">
+	          <form action="#" class="form">
+	            <select id="contactDropdown">
+	              <option DISABLED>Silahkan Pilih Tema</option>
+	              <option>Bleach</option>
+	              <option>Doraemon</option>
+	              <option>Gintama</option>
+	              <option>Naruto</option>
+	              <option>One Piece</option>
+	            </select>
+	          </form>
+	        </div>
+	      </div>
       </div>
 
     </div>
@@ -65,7 +62,7 @@
     <script src="js/foundation.min.js"></script>
     <script src="vendor/jquery.min.js"></script>
     <script src="vendor/what-input.min"></script>
-    <script src="js/jquery.mobile-1.4.5.min.js"></script>
+    <script src="js/jquery.mobile-1.4.5.min."></script>
     <script src="js/app.js"></script>
 
 </body>
