--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Puzzle !!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/color-scheme.css">
-  <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="icon" href="images/logo.png">
 </head>
@@ -15,56 +16,77 @@
 
     <div class="page-container">
 
-			<div class="large-12">
-	      <div class="top-bar-section">
-	        <h3 class="text-center mdc-text-blue-grey-700">
-	          <a href="#" class="title"><img src="images/logo.png" alt="Logo"></a>Choose Your Level</h3>
-	      </div>
+    	<div class="large-12" id="main-page">
 
-	      <div class="row">
-	        <div class="small-6 columns">
-	          <a href="#" class="small-5 columns button level right">1 <span class="block">Play Now !</span></a>
-	        </div>
+				<div class="large-12" data-role="page" id="page-1">
 
-	        <div class="small-6 columns">
-	          <a href="#" class="small-5 columns button level disabled">2 <span class="block">(Locked)</span></a>
-	        </div>
-	      </div>
+		      <div class="top-bar-section" data-role="header">
+		        <h3 class="text-center mdc-text-blue-grey-700">
+		          <a href="#" class="title"><img src="images/logo.png" alt="Logo"></a>Choose Your Level
+	          </h3>
+		      </div>
 
-	      <div class="row">
-	        <div class="small-6 columns">
-	          <a href="#" class="small-5 columns button level right disabled">3 <span class="block">(Locked)</span></a>
-	        </div>
+		      <div class="row">
+		        <div class="small-6 columns" data-role="main" class="ui-content">
+		          <a href="#page-2" data-transition="fade" class="small-5 columns button level right">1
+		          	<span class="block">Play Now !</span>
+		          </a>
+		        </div>
 
-	        <div class="small-6 columns">
-	          <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
-	        </div>
-	      </div>
+		        <div class="small-6 columns" data-role="main" class="ui-content">
+		          <a href="#" class="small-5 columns button level disabled">2 <span class="block">(Locked)</span></a>
+		        </div>
+		      </div>
 
-	      <div class="row">
-	          <div class="small-8 columns small-centered">
-	          <form action="#" class="form">
-	            <select id="contactDropdown">
-	              <option DISABLED>Silahkan Pilih Tema</option>
-	              <option>Bleach</option>
-	              <option>Doraemon</option>
-	              <option>Gintama</option>
-	              <option>Naruto</option>
-	              <option>One Piece</option>
-	            </select>
-	          </form>
-	        </div>
-	      </div>
-      </div>
+		      <div class="row">
+		        <div class="small-6 columns" data-role="main" class="ui-content">
+		          <a href="#" class="small-5 columns button level right disabled">3 <span class="block">(Locked)</span></a>
+		        </div>
 
-    </div>
+		        <div class="small-6 columns" data-role="main" class="ui-content">
+		          <a href="#" class="small-5 columns button level disabled">4 <span class="block">(Locked)</span></a>
+		        </div>
+		      </div>
+
+		      <div class="row">
+		          <div class="small-8 columns small-centered"  data-role="main" class="ui-content">
+			          <form action="#" class="form">
+			            <select id="contactDropdown">
+			              <option DISABLED>Silahkan Pilih Tema</option>
+			              <option>Bleach</option>
+			              <option>Doraemon</option>
+			              <option>Gintama</option>
+			              <option>Naruto</option>
+			              <option>One Piece</option>
+			            </select>
+			          </form>
+			        </div>
+		      </div>
+      	</div>
+
+      	<div class="large-12" data-role="page" id="page-2">
+				  <div data-role="header">
+				    <h1>Welcome To My Homepage</h1>
+				  </div>
+
+				   <div data-role="main" class="ui-content" id="memory_board">
+				    <p>Click on the link to go back. <b>Note</b>: fade is default.</p>
+				  </div>
+
+				  <div data-role="footer">
+				    <h1>Footer Text</h1>
+				  </div>
+				</div> 
+
+   		</div>
+ 		</div>
 
     <script src="js/foundation.min.js"></script>
-    <script src="vendor/jquery.min.js"></script>
-    <script src="vendor/what-input.min"></script>
-    <script src="js/jquery.mobile-1.4.5.min."></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/what-input.min.js"></script>
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/app.js"></script>
-
+		<script>newBoard();</script>
 </body>
 
 </html>
