--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/color-scheme.css">
+  <link rel="stylesheet" href="css/foundation-icons.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="icon" href="images/logo.png">
 </head>
 
 <body>
+
+		
 
     <div class="page-container">
 
@@ -72,11 +75,39 @@
 	          </h3>
 		      </div>
 
-			    <div data-role="main" class="ui-content large-12" id="memory_board">
+			    <div data-role="main" class="ui-content large-12 mmb" id="memory_board1">
 				  </div>
 
 				  <div data-role="footer">
-				    <h1>Footer Text</h1>
+				    <h1>
+				    	<div id="con" title="Selamat !!">
+							</div>
+							<div class="next hide">
+								<a href="#page-3"><i class="fi-arrow-right size-72"></i></a>
+							</div>
+						</h1>
+				  </div>
+				</div> 
+
+				<div class="large-12" data-role="page" id="page-3">
+
+				  <div class="top-bar-section" data-role="header">
+		        <h3 class="text-center mdc-text-blue-grey-700">
+		          <a href="#page-1" class="title"><img src="images/logo.png" alt="Logo"></a>Solve the Puzzle
+	          </h3>
+		      </div>
+
+			    <div data-role="main" class="ui-content large-12 mmb" id="memory_board2">
+				  </div>
+
+				  <div data-role="footer">
+				    <h1>
+				    	<div id="con" title="Selamat !!">
+							</div>
+							<div class="next">
+								<a href="#page-3 disabled"><i class="fi-arrow-right size-72"></i></a>
+							</div>
+						</h1>
 				  </div>
 				</div> 
 
